# dl-study

./: .gitignore  dl-with-pytorch.md  main.py  pyproject.toml  requirements.txt
data/: .gitignore
dl-study-venv/: .gitignore  c01_01_torch.ipynb  c01_03_torch_model.ipynb  c01_05_tensorboard.ipynb  c02_01_cnn.ipynb  c02_02_cnn_transfer_learning.ipynb  p_bge_m3.ipynb
docs/: dl-with-pytorch.md  uv.md  venv.md  가상환경.md
docs/밑바닥부터 시작하는 딥러닝/: 01_Basic.md  02_학습기법.md  03_하이퍼파라미터.md  04_CNN.md  05_NLP.md  06_word2vec.md  dl-from-scratch.md
src/pytorch/: c01_01_torch.ipynb  c01_02_dataset.ipynb  c01_04_torchmetrics.ipynb  c01_06_car_classification.ipynb  c02_01_cnn.ipynb  c02_02_cnn_transfer_learning.ipynb  c02_02_cnn_transfer_learning2.ipynb  p_argparse_test.py  p_one_hot_encoding.ipynb  p_sentence_classification.ipynb  p_tokenizer_with_kopera.ipynb  p_transformer.ipynb
src/scratch/: dl-from-scratch.md
src/scratch/book1/: ch01_02_matplotlib.ipynb  ch03_03_neural.ipynb  ch03_04_mnist.ipynb  ch04_02_differentiation.ipynb  ch04_03_gradient_descent.ipynb  ch04_04_mnist_net.ipynb  ch05_02_backpropagation_net.ipynb  test.ipynb
src/scratch/book1/common/: functions.py
src/scratch1/: ch01_01_numpy.ipynb  ch02_01_perceptron.ipynb  ch03_01_activation.ipynb  ch03_02_ndim.ipynb  ch04_01_loss.ipynb  ch05_01_backpropagation.ipynb  ch06_01_optimizer.ipynb  ch07_01_cnn.ipynb
src/scratch1/common/: functions.py  layers.py  optimizer.py
src/scratch2/: ch01_01_nlp.ipynb  ch02_01_word2vec.ipynb
src/scratch2/common/: layers.py  optimizer.py  trainer.py  util.py
