[project]
name = "dl-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "cupy-cuda12x>=14.0.1",
    "torch",
    "torchvision",
    "torchaudio",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true  # PyTorch 관련 패키지만 이 인덱스를 쓰도록 설정

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
